<resources>
    <string name="app_name">ShoppingListApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Einkaufslisten - App</string>
    <string name="nav_header_subtitle">Thg Illusions 2022 - reset_all@agmx.de</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_shoppinglist">Einkaufsliste</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_standard">Standards</string>
    <string name="menu_category">Kategorien</string>
    <string name="add_category">Neue Kategorie</string>
    <string name="fragment_headline_category">Kategorieübersicht</string>
    <string name="fragment_headline_shoppinglist">Einkaufsliste</string>
    <string name="app_version">v1.0</string>
    <string name="fragment_headline_standard">Standards wiederherstellen</string>
    <string name="fragment_headline_listmanagement">Listenverwaltung</string>
    <string name="menu_listmanagement">Listenverwaltung</string>
    <string name="dialog_edit_item_text">Bezeichnung eingeben</string>
    <string name="dialog_save_buttontext">Speichern</string>
    <!-- User Messages-->
    <string name="dialog_category_deletion_warning_text">Wollen Sie die Kategorie wirklich entfernen? Alle damit verbundenen Produkte werden ebenfalls entfernt</string>
    <string name="dialog_list_deletion_warning_text">Wollen Sie die Liste wirklich löschen?</string>
    <string name="dialog_shoppinglist_deletion_warning_text">Wollen Sie die aktuelle Einkaufsliste wirklich löschen?</string>
    <string name="dialog_item_deletion_warning_text">Wollen Sie das Produkt wirklich endgültig löschen?</string>
    <string name="action_messenger">Per Messenger versenden</string>
    <string name="action_fileopen">Datei öffnen</string>
    <string name="dialog_shoppinglist_deletion_doubles_warning_text">Dies entfernt doppelte Einträge innerhalb einer Kategorie</string>

</resources>