<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shoppinglist"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_shoppinglist" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_baseline_reorder_24"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_standard"
            android:icon="@drawable/ic_baseline_playlist_add_24"
            android:title="@string/menu_standard" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

    </group>
</menu>